Fix font not showing correctly on some devices

--- a/assets/scss/components/stencil/category/_goatthroatcompat.scss
+++ b/assets/scss/components/stencil/category/_goatthroatcompat.scss
@@ -63,7 +63,7 @@
 .compat-header, .compat-chem-name {
   margin-top: 0;
   font-size: 18px;
-  font-family: "Cabin SemiBold";
+  font-family: "Cabin SemiBold", "Cabin", sans-serif;
   text-transform: uppercase;
 }
 
